# study-code

./: .gitignore  README.md  app.py  build.gradle  db.sqlite3  docker-compose.yml  index.js  index.php  jaguars.yaml  leopards.yaml  main.html  main.php  package-lock.json  package.json  prac_app.py  readme.md  scraping.py  tigers.yaml
api/: models.py  serializers.py  urls.py  views.py
capstone/: .gitignore  db.sqlite3
components/: deleteData.php  inputdataTable.html  inputdataTable.php
config/: asgi.py  settings.py  urls.py  wsgi.py
crawling/: DaumNews.py  GoogleNews.py  GoogleNews_final.py  NaverNews.py  insta_1.py  insta_2.py  insta_practice.py  navernews_1.py  navernews_2.py  sh_keyword.py
css/: datatable.css
dash/: settings.py  urls.py
dash_app/: urls.py  views.py
database/: insertDummy.php  test.db
dong5854.momentum.io/: index.html
effective-java/: Item1.java
exel-export/: readme.md
frontend/: package-lock.json  package.json  urls.py  webpack.config.js
git-practice/: leopards.yaml  panthers.yaml  tigers.yaml
hasura-poll-example/: README.md
js/: datatables.js  deleteData.js  editData.js  forminput.js
langchain-poc/: ollama.py  ollama_api.py  ollama_langchain.py  pyproject.toml
machinelearning/: S_machine.py  machine.py
movieql/: package.json
my_dictionary/: app.py
my_sns/: prac_bulma.html
python/: p_chapter01_02.py  python_oop.py
redis/: docker-compose.yml  whitelist_output.py
restaurants_map/: prac_scraping2.py
spring-practice/: pom.xml
src/: GraphQL.jsx  firebase.js  index.js
templates/: prac_map.html  signin.html  (+1 more)
(+301 files in other folders)
