[project]
name = "langchain-poc"
version = "0.1.0"
description = "langchain poc"
authors = [
    {name = "dong young",email = "dong5854@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
